--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.13.0",
+    "deepl-node": "^1.21.0",
     "next": "15.5.6",
     "next-sanity": "^11.6.5",
     "react": "19.1.0",
